Discutindo sobre onde implementar as consultas com dados agregados